--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     background-color: transparent;
     font-size:15px;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 button{
     cursor: pointer;
@@ -396,7 +396,7 @@ button{
     font-weight: bold;
 }
 .m-text p{
-    font-size: 60px;
+    font-size: 50px;
 }
 .m-text .inp1{
     width: 108vh;
@@ -407,10 +407,16 @@ button{
     border-color: black;
     border-width:1px;
 }
+.m-text a{
+    text-decoration: none;
+    color: #E1AD01;
+}
+.inp1{
+    padding: 0 15px;
+}
 input::placeholder{
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    padding-left: 10px;
     letter-spacing: 1px;
 }
 .inp2{
@@ -480,8 +486,8 @@ input::placeholder{
     padding-bottom: 2%;
 }
 .cright img{
-    width: 250px;
-    height: 125px;
+    width: 175px;
+    height: 75px;
     margin-bottom: 25px;
 }
 .cli ul li{
@@ -494,12 +500,16 @@ input::placeholder{
     cursor: pointer;
     transition: 0.3s;
 }
-.cli ul li:hover{
+.cli a:hover{
     color: rgb(255, 193, 78);
 }
 .cli ul{
     display: flex;
     justify-content: center;
+}
+.cli a{
+    text-decoration: none;
+    color: #E1AD01;
 }
 .socmed h1{
     color: #E1AD01;
