--- a/about.css
+++ b/about.css
@@ -2,12 +2,12 @@
     margin: 0;
 }
 @font-face {
-    font-family: 'Circular';
-    src: url('CircularStd-Black.otf') format('otf');
+font-family: 'Poppins', sans-serif;
+    src: url('Website/CircularStd-Black.otf') format('otf');
 }
 @font-face {
     font-family: 'Merry';
-    src: url('Merriweather-Light.ttf') format('tff');
+    src: url('Website/Merriweather-Light.ttf') format('tff');
 }
 .bg{
     width: 100%;
@@ -16,7 +16,7 @@
 .navBar{
     width: 100%;
     height: 90px;
-    background-color: #ff8125;
+    background-color: #E1AD01;
     display:flex;
     align-items: center;
     position:fixed;
@@ -35,7 +35,7 @@
     background-color: transparent;
     font-size:15px;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 button{
     cursor: pointer;
@@ -51,14 +51,14 @@ button{
 }
 .b-content{
     width: 100%;
-    height: 230vh;
+    height: 245vh;
     background-color: #f2efe0;
     display: flex;
     justify-content: center;
 }
 .b-container{
     width: 60%;
-    height: 150vh;
+    height: 170vh;
     position: relative;
     background-color: #f2efe0;
 }
@@ -66,21 +66,26 @@ button{
     width: 100%;
     padding-top: 18%;
 }
-.b-text h1{
+.h1-text{
     margin-bottom: 5px;
     font-size: 400%;
-    font-family: 'Circular', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .b-text p{
-    font-family: 'Merry';
-    font-size: 107%;
+    font-family: 'Merriweather', serif;
+    font-size: 90%;
     line-height: 30px;
     color: rgb(19, 19, 19);
+}
+.space{
+    width: 100%;
+    height: 1px;
+    margin-top: 51%;
 }
 .photos{
     width: 100%;
     height: 50%;
-    margin-top: 42%;
+    margin-top: 41%;
     display: flex;
     background-color: black;
     position: absolute;
@@ -91,14 +96,14 @@ button{
     clip: rect(0, 1200px, 1200px, 0);
 }
 .awards{
-    margin-top: 50%;
+    margin-top: 8%;
     width: 170vh;
     position: relative;
     right: 16%;
 }
-.awards h1{
-    font-size: 370%;
-    font-family: 'Circular', sans-serif;
+.header1{
+    font-size: 300%;
+    font-family: 'Poppins', sans-serif;
 }
 .c-sqr{
     width: 100%;
@@ -112,12 +117,12 @@ button{
 }
 .tab h1{
     font-size: 20px;
-    font-family: 'Circular', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
 .tab h3{
     font-size: 15px;
-    font-family: 'Merry', sans-serif;
+    font-family: 'Merriweather', sans-serif;
     position: relative;
     bottom: 5px;
     font-weight: lighter;
@@ -126,6 +131,7 @@ button{
     width: 100%;
     height: 55vh;
     margin-bottom: 10px;
+    filter: grayscale(1);
 }
 .ref{
     width: 100%;
@@ -145,8 +151,8 @@ button{
     padding-bottom: 2%;
 }
 .cright img{
-    width: 250px;
-    height: 125px;
+    width: 175px;
+    height: 75px;
     margin-bottom: 25px;
 }
 .cli ul li{
@@ -159,12 +165,16 @@ button{
     cursor: pointer;
     transition: 0.3s;
 }
-.cli ul li:hover{
+.cli a:hover{
     color: rgb(255, 193, 78);
 }
 .cli ul{
     display: flex;
     justify-content: center;
+}
+.cli a{
+    text-decoration: none;
+    color: #E1AD01;
 }
 .socmed h1{
     color: #E1AD01;
