--- a/works.css
+++ b/works.css
@@ -8,7 +8,7 @@
 .navBar{
     width: 100%;
     height: 90px;
-    background-color: #ff8125;
+    background-color: #E1AD01;
     display:flex;
     align-items: center;
     position:fixed;
@@ -27,7 +27,7 @@
     background-color: transparent;
     font-size:15px;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 button{
     cursor: pointer;
@@ -41,83 +41,181 @@ button{
     width: 30px;
     margin-right: 30px;
 }
-.ref{
+.m-container{
+    width: 100%;
+    height: 500vh;
+}
+.bgVid{
+    z-index: -1;
+    width: 100%;
+    margin-top: 90px;
+    height: 100%;
+    
+}
+.message{
     width: 100%;
     height: 100vh;
+}
+.g-content{
+    width: 100%;
+    height: 300vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: black;
 }
-.cright{
+.category{
+    margin-top: 50px;
     width: 80%;
-    height: 50vh;
 }
-.cimg{
+.tab{
+    width: 100%;
     display: flex;
-    justify-content: center;
-    padding-bottom: 2%;
+    height: 90px;
+    align-items: center;
+    transition: 0.5s;
+    border-bottom-style: solid;
+    border-bottom-color: white;
+    border-bottom-width: 1px;
+    color: white;
 }
-.cright img{
-    width: 250px;
-    height: 125px;
-    margin-bottom: 25px;
-}
-.cli ul li{
-    color: #E1AD01;
+.tab h1{
     font-family: Arial, Helvetica, sans-serif;
-    list-style-type: none;
+    margin-left: 10px;
+}
+.tab a{
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
     margin-right: 20px;
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.3s;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.cli ul li:hover{
-    color: rgb(255, 193, 78);
+.tab a:hover{
+    color: rgb(49, 49, 49);
+    text-decoration: underline 1px;
 }
-.cli ul{
+.a1{
+    margin-left: 50%;
+}
+.arts{
+    width: 100%;
     display: flex;
-    justify-content: center;
+    height: 490px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.arts div{
+    margin-right: 5px;
+}
+.shadow h1{
+    font-family: 'Poppins', sans-serif;
+    font-size: 30px;
+    position: relative;
+    z-index: 1;
+    color: white;
+    top: 40px;
+    margin-left: 15px;
+    filter: opacity(0%);
+    transition: 0.5s;
+    font-weight: bolder;
+}
+.shadow:hover h1{
+    filter: opacity(100%);
+    top: 15px;
+}
+.shadow{
+    width: 44%;
+    height: 100%;
+}
+.shadow a{
+    text-decoration: none;
+}
+.shadow img{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    bottom: 35px;
+    transition: 0.5s;
+}
+.shadow:hover img{
+    filter: brightness(0.3);
+}
+#photo, #graphic{
+    margin-top: 30px;
+    color: white;
+}
+.ref{
+    width: 100%;
+    height: 50vh;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+}
+.r-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+.c-logo{
+    margin-top: 5%;
+    width: 40%;
+    height: 60%;
+    margin-left: 5%;
+}
+.c1{
+    display: flex;
+    width: 100%;
+}
+.c2{
+    width: 150px;
+    margin-right: 50px;
+}
+.c2 p{
+    margin-top: 20px;
+    line-height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.c3{
+    width: 150px;
+}
+.c3 p{
+    margin-top: 20px;
+    line-height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.c-logo img{
+    filter: brightness(0);
+    width: 150px;
+    height: 75px;
+}
+.c-icons{
+    width: 40%;
+    height: 60%;
+    margin-top: 5%;
 }
 .socmed h1{
-    color: #E1AD01;
-    display: flex;
-    justify-content: center;
+    color: black;
     margin: 4% 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
-}
-.socapp{
-    display: flex;
-    justify-content: center;
+    margin-left: 10%;
 }
 .socapp ul{
     display: flex;
-    justify-content: center;
 }
 .socapp ul li{
-    color: #E1AD01;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
-    margin: 0 30px;
+    margin: 0 10px;
     font-size: 100%;
     padding: 3%;
     cursor: pointer;
     border-style: solid;
-    border-color: #E1AD01;
+    border-color: black;
     border-width: 1px;
     border-radius: 10px;
     transition: 0.3s;
 }
 .socapp ul li:hover{
-    background-color: #E1AD01;
-    color: black;
-}
-.cp h1{
-    color: #E1AD01;
-    justify-content: center;
-    display: flex;
-    font-size: 15px;
-    margin-top: 8%;
+    background-color: black;
+    color: white;
 }
