--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ button{
 .container{
     position: relative;
     bottom: 75%;
+    margin-left: 100px;
     color: white;
-    margin-left: 110px;
 }
 .container h2{
     font-family: Arial, Helvetica, sans-serif;
@@ -379,9 +379,9 @@ button{
 }
 .mail{
     height: 125vh;
+    margin-top: -100px;
     width: 100%;
     background-color: #E1AD01;
-    margin-top: 15%;
     display: flex;
     align-items: center;
 }
@@ -470,85 +470,93 @@ input::placeholder{
 }
 .ref{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-}
-.cright{
-    width: 80%;
     height: 50vh;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
 }
-.cimg{
+.r-container{
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    padding-bottom: 2%;
 }
-.cright img{
-    width: 175px;
-    height: 75px;
-    margin-bottom: 25px;
+.c-logo{
+    margin-top: 5%;
+    width: 40%;
+    height: 60%;
+    margin-left: 5%;
 }
-.cli ul li{
-    color: #E1AD01;
+.c1{
+    display: flex;
+    width: 100%;
+}
+.c2{
+    width: 150px;
+    margin-right: 50px;
+}
+.c2 p{
+    margin-top: 20px;
+    line-height: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    list-style-type: none;
-    margin-right: 20px;
-    font-size: 15px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.3s;
 }
-.cli a:hover{
-    color: rgb(255, 193, 78);
+.c3{
+    width: 150px;
 }
-.cli ul{
-    display: flex;
-    justify-content: center;
+.crt{
+    margin-left: 5%;
+    font-size: 7px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: gray;
+    position: relative;
+    bottom: 30px;
 }
-.cli a{
-    text-decoration: none;
-    color: #E1AD01;
+.c3 p{
+    margin-top: 20px;
+    line-height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.c-logo img{
+    filter: brightness(0);
+    width: 150px;
+    height: 75px;
+}
+.c-icons{
+    width: 40%;
+    height: 60%;
+    margin-top: 5%;
 }
 .socmed h1{
-    color: #E1AD01;
-    display: flex;
-    justify-content: center;
+    color: black;
     margin: 4% 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
-}
-.socapp{
-    display: flex;
-    justify-content: center;
+    margin-left: 10%;
 }
 .socapp ul{
     display: flex;
-    justify-content: center;
 }
-.socapp ul li{
-    color: #E1AD01;
+.socapp ul li a{
+    text-decoration: none;
+    color: black;
+    font-weight: lighter;
+}
+.socapp ul li:hover a{
+    color: white;
+}
+.socapp ul a{
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     list-style-type: none;
-    margin: 0 30px;
+    margin: 0 10px;
     font-size: 100%;
     padding: 3%;
     cursor: pointer;
     border-style: solid;
-    border-color: #E1AD01;
+    border-color: black;
     border-width: 1px;
     border-radius: 10px;
     transition: 0.3s;
 }
-.socapp ul li:hover{
-    background-color: #E1AD01;
-    color: black;
-}
-.cp h1{
-    color: #E1AD01;
-    justify-content: center;
-    display: flex;
-    font-size: 15px;
-    margin-top: 8%;
+.socapp ul a:hover{
+    background-color: black;
+    color: white;
 }
