--- a/works.css
+++ b/works.css
@@ -141,6 +141,7 @@ button{
     color: white;
     margin-bottom: 20px;
     transition: 0.5s;
+    font-family: 'Poppins', sans-serif;
 }
 .v-container{
     width: 100%;
